--- a/home.html
+++ b/home.html
@@ -30,30 +30,21 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            <a class="nav-link active" aria-current="page" href="./home.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">UPCOMING EVENTS</a>
+                            <a class="nav-link" href="./upcoming_events.html">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PAST EVENTS</a>
+                            <a class="nav-link" href="./past_events.html">PAST EVENTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="./contact.html">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">STATS</a>
+                            <a class="nav-link" href="./stats.html">STATS</a>
                         </li>
-                        <!-- <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li> -->
                     </ul>
-                    <!-- <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-success" type="submit">
-                            Search
-                        </button>
-                    </form> -->
                 </div>
             </div>
         </nav>
@@ -171,7 +162,7 @@
                 </div>
                 <div class="card-footer">
                     <a href="#">Price</a>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -183,7 +174,7 @@
                 </div>
                 <div class="card-footer">
                     <a href="#">Price</a>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -195,7 +186,7 @@
                 </div>
                 <div class="card-footer">
                     <a href="#">Price</a>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -207,7 +198,58 @@
                 </div>
                 <div class="card-footer">
                     <a href="#">Price</a>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/books.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#">Price</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/cinema.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#">Price</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/costume_party.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#">Price</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/marathon.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#">Price</a>
+                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
