--- a/stats.html
+++ b/stats.html
@@ -170,6 +170,58 @@
             </table>
         </div>
 
+        <!-- <div class="container-tabla">
+            <table>
+
+                <tbody>
+                    <tr class="eventos">
+                        <td colspan="3"><b>Events Statics</b></td>
+                    </tr>
+                    <tr>
+                        <td>Events with highest % of assistance</td>
+                        <td>Events with lowest % of assistance</td>
+                        <td>Events with larger capacity</td>
+                    </tr>
+                    <tr>
+                        <td>_</td>
+                        <td>_</td>
+                        <td>_</td>
+                    </tr>
+                    <tr class="eventos">
+                        <td colspan="3"><b>Upcoming events statics by category</b></td>
+                    </tr>
+                    <tr>
+                        <td>Categories</td>
+                        <td>Revenues</td>
+                        <td>Percentage of assistance</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>_</td>
+                        <td>_</td>
+                    </tr>
+                    <tr>
+                        <td>_</td>
+                        <td>_</td>
+                        <td>_</td>
+                    </tr>
+                    <tr class="eventos">
+                        <td colspan="3"><b>Past events statics by category</b></td>
+                    </tr>
+                    <tr>
+                        <td>_</td>
+                        <td>_</td>
+                        <td>_</td>
+                    </tr>
+                    <tr>
+                        <td>_</td>
+                        <td>_</td>
+                        <td>_</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div> -->
+
     </main>
 
     <footer>
