--- a/home.html
+++ b/home.html
@@ -203,7 +203,7 @@
             </div>
         </div>
 
-        <div class="cards">
+        <!-- <div class="cards">
             <div class="card" style="width: 18rem;">
                 <img src="./assets/books.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -252,7 +252,7 @@
                     <a href="./details.html" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <footer>
