update media queries + correcciones

--- a/home.html
+++ b/home.html
@@ -274,7 +274,7 @@
             </div>
         </div>
         <div class="container-text">
-            <h1>COHORT 01 TM - Alavila Cesar</h1>
+            <p>COHORT 01 TM - Alavila Cesar</p>
         </div>
     </footer>
 
