--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                 </button>
                 <!-- LOGO -->
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/amazing_brand.png" alt="Amazing Events" width="100" />
+                    <img src="./assets/amazing_brand.png" alt="Amazing Events" width="100">
                 </a>
                 <!-- <a class="navbar-brand"
                     href="#">Se puede poner un nombre alternativo en la barra de navegacion
@@ -114,32 +115,32 @@
         <div class="filtro">
             <div class="checkbox">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="categoria1">
+                    <label class="form-check-label" for="categoria1">
                         Category
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="categoria2">
+                    <label class="form-check-label" for="categoria2">
                         Category
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="categoria3">
+                    <label class="form-check-label" for="categoria3">
                         Category
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="categoria4">
+                    <label class="form-check-label" for="categoria4">
                         Category
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="categoria5">
+                    <label class="form-check-label" for="categoria5">
                         Category
                     </label>
                 </div>
@@ -203,56 +204,55 @@
             </div>
         </div>
 
-        <!-- <div class="cards">
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/books.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./assets/books.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/cinema.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div class="card-footer">
+                <a href="#">Price</a>
+                <a href="./details.html" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/costume_party.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./assets/cinema.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/marathon.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div class="card-footer">
+                <a href="#">Price</a>
+                <a href="./details.html" class="btn btn-primary">Go somewhere</a>
             </div>
-        </div> -->
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./assets/costume_party.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+            <div class="card-footer">
+                <a href="#">Price</a>
+                <a href="./details.html" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./assets/marathon.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+            <div class="card-footer">
+                <a href="#">Price</a>
+                <a href="./details.html" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+
     </main>
 
     <footer>
