--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -23,11 +23,9 @@
                 </button>
                 <!-- LOGO -->
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/amazing_brand.png" alt="Amazing Events" width="100">
+                    <img src="./assets/amazing_brand.png" alt="Amazing Events">
                 </a>
-                <!-- <a class="navbar-brand"
-                    href="#">Se puede poner un nombre alternativo en la barra de navegacion
-                </a> -->
+
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
