--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <title>Home</title>
+    <title>Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/style.css">
@@ -64,10 +64,6 @@
                     card's content.</p>
             </div>
         </div>
-
-
-
-
     </main>
 
     <footer class="pie">
@@ -89,7 +85,7 @@
             </div>
         </div>
         <div class="container-text">
-            <h1>COHORT 01 TM - Alavila Cesar</h1>
+            <p>COHORT 01 TM - Alavila Cesar</p>
         </div>
     </footer>
 
