--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <title>Home</title>
+    <title>Stats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/style.css">
@@ -168,58 +168,6 @@
             </table>
         </div>
 
-        <!-- <div class="container-tabla">
-            <table>
-
-                <tbody>
-                    <tr class="eventos">
-                        <td colspan="3"><b>Events Statics</b></td>
-                    </tr>
-                    <tr>
-                        <td>Events with highest % of assistance</td>
-                        <td>Events with lowest % of assistance</td>
-                        <td>Events with larger capacity</td>
-                    </tr>
-                    <tr>
-                        <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
-                    <tr class="eventos">
-                        <td colspan="3"><b>Upcoming events statics by category</b></td>
-                    </tr>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of assistance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
-                    <tr>
-                        <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
-                    <tr class="eventos">
-                        <td colspan="3"><b>Past events statics by category</b></td>
-                    </tr>
-                    <tr>
-                        <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
-                    <tr>
-                        <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div> -->
-
     </main>
 
     <footer>
@@ -241,7 +189,7 @@
             </div>
         </div>
         <div class="container-text">
-            <h1>COHORT 01 TM - Alavila Cesar</h1>
+            <p>COHORT 01 TM - Alavila Cesar</p>
         </div>
     </footer>
 
