--- a/home.html
+++ b/home.html
@@ -202,7 +202,7 @@
             </div>
         </div>
 
-        <!-- <div class="cards">
+        <div class="cards">
             <div class="card" style="width: 18rem;">
                 <img src="./assets/books.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -251,7 +251,7 @@
                     <a href="./details.html" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
-        </div> -->
+        </div>
     </main>
 
     <footer>
@@ -263,12 +263,12 @@
             </div>
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/instagram.png" alt="facebook" width="30" height="24">
+                    <img src="./assets/instagram.png" alt="instagram" width="30" height="24">
                 </a>
             </div>
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/whatsapp.png" alt="facebook" width="30" height="24">
+                    <img src="./assets/whatsapp.png" alt="whatsapp" width="30" height="24">
                 </a>
             </div>
         </div>
