--- a/past_events.html
+++ b/past_events.html
@@ -53,12 +53,10 @@
                     <img src="./assets/optional_banner_3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h5>PAST EVENTS</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure ipsa dolorem dolor
-                            exercitationem consequuntur odit, totam voluptatibus dignissimos ea, reprehenderit dolores
-                            aut itaque repudiandae sapiente laboriosam aspernatur eaque alias?</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure ipsa dolorem dolor exercitationem consequuntur odit, totam voluptatibus dignissimos ea, reprehenderit dolores aut itaque repudiandae sapiente laboriosam aspernatur eaque alias?</p> -->
                     </div>
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <img src="./assets/optional_banner_2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h5>UPCOMING EVENTS</h5>
@@ -93,9 +91,9 @@
                             laudantium nihil ducimus beatae. Qui, dicta expedita quaerat veniam in quos, aperiam
                             provident eligendi velit enim officia!</p>
                     </div>
-                </div>
+                </div> -->
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -104,7 +102,7 @@
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+            </button> -->
         </div>
     </header>
 
