--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -54,12 +54,10 @@
                     <img src="./assets/optional_banner_2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h5>UPCOMING EVENTS</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem officia numquam ea
-                            voluptatum similique nulla! Nemo rem, quo totam quae omnis, accusamus mollitia sit dicta eum
-                            aspernatur consequuntur reprehenderit expedita.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem officia numquam ea voluptatum similique nulla! Nemo rem, quo totam quae omnis, accusamus mollitia sit dicta eum aspernatur consequuntur reprehenderit expedita.</p> -->
                     </div>
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <img src="./assets/optional_banner_1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h5>HOME</h5>
@@ -94,9 +92,9 @@
                             laudantium nihil ducimus beatae. Qui, dicta expedita quaerat veniam in quos, aperiam
                             provident eligendi velit enim officia!</p>
                     </div>
-                </div>
+                </div> -->
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -105,7 +103,7 @@
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+            </button> -->
         </div>
     </header>
 
