--- a/past_events.html
+++ b/past_events.html
@@ -53,56 +53,9 @@
                     <img src="./assets/optional_banner_3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h5>PAST EVENTS</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure ipsa dolorem dolor exercitationem consequuntur odit, totam voluptatibus dignissimos ea, reprehenderit dolores aut itaque repudiandae sapiente laboriosam aspernatur eaque alias?</p> -->
                     </div>
                 </div>
-                <!-- <div class="carousel-item">
-                    <img src="./assets/optional_banner_2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>UPCOMING EVENTS</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem officia numquam ea
-                            voluptatum similique nulla! Nemo rem, quo totam quae omnis, accusamus mollitia sit dicta eum
-                            aspernatur consequuntur reprehenderit expedita.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/optional_banner_1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>HOME</h5>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio quidem perferendis,
-                            illum beatae cumque reprehenderit vitae in quod aspernatur cum ea laborum quo recusandae
-                            accusamus corrupti suscipit excepturi! Et, voluptates.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/optional_banner_4.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>CONTACT</h5>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et hic ab esse dolorem voluptatum
-                            quam, incidunt tempore modi beatae asperiores nam perspiciatis molestias obcaecati magni
-                            architecto ullam eos at! Iusto.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/optional_banner_5.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
-                        <h5>STATS</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nisi pariatur minima enim
-                            laudantium nihil ducimus beatae. Qui, dicta expedita quaerat veniam in quos, aperiam
-                            provident eligendi velit enim officia!</p>
-                    </div>
-                </div> -->
             </div>
-            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button> -->
         </div>
     </header>
 
@@ -224,7 +177,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="./past_events.js"></script>
+    <script src="./assets/js/past_events.js"></script>
 </body>
 
 </html>
