--- a/home.html
+++ b/home.html
@@ -103,55 +103,8 @@
             </div>
         </div>
 
-        <div class="cards">
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/books.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/cinema.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/costume_party.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/marathon.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#">Price</a>
-                    <a href="./details.html" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+        <div class="row" id="contenedorEventos">
+
         </div>
 
     </main>
@@ -180,6 +133,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="./assets/js/data.js"></script>
     <script src="./assets/js/home.js"></script>
 </body>
 
