--- a/past_events.html
+++ b/past_events.html
@@ -177,6 +177,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="./assets/js/data.js"></script>
     <script src="./assets/js/past_events.js"></script>
 </body>
 
