add comentario home/card

--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="row" id="contenedorEventos">
-
+<!--aqui genera cards JS-->
         </div>
     </main>
 
