add funcionalidad Filtro (checkbox)

--- a/past_events.html
+++ b/past_events.html
@@ -63,15 +63,15 @@
         <div class="filtro">
             <div class="checkbox">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria1">
-                    <label class="form-check-label" for="categoria1">
-                        Category
+                    <label class="form-check-label" for="categoria1">Cancha
+                        <input class="form-check-input" type="checkbox" value="" id="categoria1">
+                        
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria2">
-                    <label class="form-check-label" for="categoria2">
-                        Category
+                    <label class="form-check-label" for="categoria2">Campo
+                        <input class="form-check-input" type="checkbox" value="" id="categoria2">
+                        
                     </label>
                 </div>
                 <div class="form-check">
