update issue fixed in details.js

--- a/details.html
+++ b/details.html
@@ -52,20 +52,22 @@
 
     <main class="details">
         <div class="container" id="containerCard">
-            <div class="card col-11 col-sm-4 col-md-3 col-xl-2">
+            <!-- <div class="card col-11 col-sm-4 col-md-3 col-xl-2">
                 <div class="card-img">
                     <img src="${objeto.image}" class="card-img-top" alt="{objeto.name}">
                 </div>
-                <div class="card-body">
-                    <h2>${objeto.name}</h2>
-                    <p>${objeto.category}</p>
-                    <p>${objeto.description}</p>
+                <div class="info">
+                    <div class="card-body">
+                        <h2>${objeto.name}</h2>
+                        <p>${objeto.category}</p>
+                        <p>${objeto.description}</p>
+                    </div>
+                    <div class="card-footer">
+                        <p>$${objeto.price} USD</p>
+                        <p>${objeto.date}</p>
+                    </div>
                 </div>
-                <div class="card-footer">
-                    <p>$${objeto.price} USD</p>
-                    <p>${objeto.date}</p>
-                </div>
-            </div>
+            </div> -->
         </div>
     </main>
 
